# F405_USB_HS_MSC

./: .mxproject  CMakeLists.txt  F405_USB_HS_MSC.ioc  README.md
.eide/: eide.json
Core/Inc/: aux_inputs.h  ext_flash_w25q.h  lcd_status.h  lcd_zh.h  ls013_lcd.h  main.h  sdio.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usart.h  wouo_ls013.h
Core/Src/: aux_inputs.c  dma.c  ext_flash_w25q.c  gpio.c  lcd_status.c  lcd_zh.c  ls013_lcd.c  main.c  sdio.c  stm32f4xx_it.c  tim.c  usart.c  wouo_ls013.c
Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_ll_usb.c
Middlewares/ST/STM32_USB_Device_Library/Class/HID/Inc/: usbd_hid.h
Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/: usbd_hid.c
Middlewares/ST/STM32_USB_Device_Library/Class/MSC/Inc/: usbd_msc.h
Middlewares/ST/STM32_USB_Device_Library/Core/Inc/: usbd_def.h
Middlewares/ST/STM32_USB_Device_Library/Core/Src/: usbd_core.c  usbd_ctlreq.c
USB_DEVICE/App/: fido_crypto.c  fido_crypto.h  fido_store.c  fido_store.h  usb_device.c  usb_device.h  usbd_ctap_min.c  usbd_ctap_min.h  usbd_desc.c  usbd_fido_class.c  usbd_fido_class.h  usbd_hid_cmsisdap.c  usbd_hid_cmsisdap.h  usbd_hid_fido.c  usbd_hid_fido.h  usbd_hid_km.c  usbd_hid_km.h  usbd_storage_if.c  usbd_storage_if.h
USB_DEVICE/CompositeBuilder/Inc/: usbd_composite_builder.h
USB_DEVICE/CompositeBuilder/Src/: usbd_composite_builder.c
cmake/stm32cubemx/: CMakeLists.txt
tools/: gen_lcd_zh.py
user_code/my_device/: led_and_key.c  led_and_key.h
user_code/my_public/: check.c  check.h  memxx_supplement.c  memxx_supplement.h  my_redifine.c  my_redifine.h  本文件夹说明.txt
